--- a/sample.html
+++ b/sample.html
@@ -12,13 +12,13 @@
 <script src="/js/jquery.1.8.2.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="/js/wpe.jquery.drawMaps.js"></script>
+<script type="text/javascript" src="wpe.jquery.drawMaps.js"></script>
 <script>
 google.load('search','1');
 </script>
 </head>
 <body style="height:100%;">
-<div class="wpe" style="height:100%;"><div id="map_canvas" style="width: 100%; height: 100%"></div></div>
+<div id="map_canvas" style="width: 100%; height: 100%">LOADING MAPS...</div>
 
 
 <script>
