--- a/sample.html
+++ b/sample.html
@@ -19,79 +19,9 @@ google.load('search','1');
 </head>
 <body style="height:100%;">
 <div id="map_canvas" style="width: 100%; height: 100%">LOADING MAPS...</div>
-
-
 <script>
-
-function getGeoCord(address, callback)
-{
-	var reObj;
-	var geocoder;
-	var geopoint;
-	
-	var myLatlng = new google.maps.LatLng(-34.397, 150.644);
-	geocoder = new google.maps.Geocoder();
-	
-	if (geocoder && address)
-	{
-		geocoder.geocode({ 'address': address}, function(results, status) {
-			if(status==google.maps.GeocoderStatus.OK)
-			{
-				geo_point = results[0].geometry.location;
-				reObj = { status: true, lat: geo_point.lat(), lan: geo_point.lng(), results: results };
-			}else{
-				reObj = { status : false, lat: null, lan: null, err: status, results: results };
-			}
-			if(typeof callback == 'function' && callback) callback(reObj);
-		});
-	}
-}
-
-/*
-(function($){
-	$.fn.drawGoogleMaps = ( function(o)
-	{
-		var me = $(this);
-		var myLatlng = new google.maps.LatLng(-34.397, 150.644);
-		var ex = $.extend({}, {
-			zoom		:	14,
-			center		:	myLatlng,
-			typeId		:	google.maps.MapTypeId.ROADMAP,
-			callback	:	function(){}
-		}, o);
-		var f = {
-			map				:	null,
-			marker		:	null,
-			localsearch	:	null,
-			draw			:	function()
-			{
-				f.search(ex.key, function(result){
-					var searchLatlng = new google.maps.LatLng(result.lat, result.lng);
-					f.options = { zoom: ex.zoom, center: searchLatlng, mapTypeId: ex.typeId },
-					f.map = new google.maps.Map(me.get(0), f.options);
-					f.marker = new google.maps.Marker({
-						position: searchLatlng,  map: f.map
-					});
-				});
-			},
-			search			:	function(k, c)
-			{
-				f.localsearch = new google.search.LocalSearch();
-				f.localsearch.setSearchCompleteCallback(this, function(e){
-					if(typeof c =='function'&&c) c(f.localsearch.results[0]);
-				}, null);
-				f.localsearch.execute(k);
-			}
-		};
-		f.draw();
-		return this;
-	});
-})(jQuery);
-*/
-
 var keys = "佐賀県佐賀市兵庫町兵庫北土地区画整理地内22街区 ゆめタウン佐賀2F";
-var mapViewObj = $('#map_canvas');
-mapViewObj.drawGoogleMaps({key: keys});
+$('#map_canvas').drawGoogleMaps({key: keys});
 </script>
 </body>
 </html>
