--- a/sample.html
+++ b/sample.html
@@ -9,10 +9,10 @@
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <meta name="copyright" content="Copyright &copy; 2012 wpe[ tsuyoshi higuchi ]. " />
-<script src="/js/jquery.1.8.2.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="jquery.1.8.2.min.js"></script>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="wpe.jquery.drawMaps.js"></script>
+<script type="text/javascript" src="jquery.drawMaps.min.js"></script>
 <script>
 google.load('search','1');
 </script>
