--- a/sample.html
+++ b/sample.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="jquery.1.8.2.min.js"></script>
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="jquery.drawMaps.min.js"></script>
+<script type="text/javascript" src="jquery.drawMaps.js"></script>
 <script>
 google.load('search','1');
 </script>
@@ -20,8 +20,7 @@ google.load('search','1');
 <body style="height:100%;">
 <div id="map_canvas" style="width: 100%; height: 100%">LOADING MAPS...</div>
 <script>
-var keys = "佐賀県佐賀市兵庫町兵庫北土地区画整理地内22街区 ゆめタウン佐賀2F";
-$('#map_canvas').drawGoogleMaps({key: keys});
+$('#map_canvas').drawGoogleMaps();
 </script>
 </body>
 </html>
