--- a/sample.html
+++ b/sample.html
@@ -20,7 +20,7 @@ google.load('search','1');
 <body style="height:100%;">
 <div id="map_canvas" style="width: 100%; height: 100%">LOADING MAPS...</div>
 <script>
-$('#map_canvas').drawGoogleMaps();
+$('#map_canvas').drawMaps();
 </script>
 </body>
 </html>
